# Web-Scrapping-Projects

./: README.md  pyproject.toml
clothes_scrap/: __init__.py  clothes_data.csv
facebook_scrap/: pyproject.toml
facebook_scrap/facebook_scrap/: __init__.py
quote_scrap/: __init__.py  quotes.txt  tags.txt
reddit_comments/: __init__.py  __init__2.py  interesting.txt  task2.csv
weather_scrap/: __init__.py  weather.csv
