[tool.poetry]
name = "facebook-scrap"
version = "0.1.0"
description = ""
authors = ["Richie_Xue <rxue40@stuy.edu>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
webdriver-manager = "^3.8.6"
selenium = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
